--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,20 @@
     <groupId>Qauber.com</groupId>
     <artifactId>sampleMavenGit</artifactId>
     <version>1.0-SNAPSHOT</version>
+ <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.10</version>
+        </dependency>
 
+</dependencies>
 
 </project>
